--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,8 @@ jikanpy==4.3.2
 lxml==4.9.3
 markdown2==2.4.11
 motor==3.5.2
-opencv-python-headless==4.8.1.78
+numpy==1.23.5
+opencv-python==4.9.0.78
 pillow==9.5.0
 pretty_errors==1.2.25
 psycopg2-binary==2.9.9
@@ -41,5 +42,3 @@ telegraph==2.2.0
 telethon==1.33.1
 tgcrypto==1.2.5
 wikipedia==1.4.0
-numpy==1.21.5
-scipy==1.9.3
